assets/scss/_styles_project.scss
/* ... */
p.card-title.mb-1 {
  font-family: $font-family-monospace !important;
  color: #0066aa !important;
  text-overflow: ellipsis !important;
  overflow: hidden !important;
  white-space: nowrap !important;
  display: inline !important;
  margin: 0 0 2px 0 !important;
  text-decoration: none !important;
}

#card-id a {
  padding: 1em !important;
  text-decoration: none !important;
  height: 8em !important;
}
.card-body .m-0 .p-2 {
  text-decoration: none !important;
}
p.card-text.text-muted.small {
  display: block !important;
  font-size: 0.8em !important;
  line-height: 1.5em !important;
  color: #333333 !important;
  font-family: "Open Sans", Helvetica, sans-serif !important;
  font-size: 0.8em !important;
  line-height: 1.5em !important;
  text-decoration: none !important;
}
.section-index {
  padding-top: 1.5rem !important;
}
p.card-text.text-muted.small:hover {
  text-decoration: none !important;
}
.td-navbar .td-search-input {
  color: black !important;
}
#sidebar-main {
  border: none !important;
  background: white !important;
}

.td-content nav { margin: 0 auto; background-color: #f0f0f0; width: 100%; font-size: 0.85em; display: block; padding: 10px 0; }
.td-content nav a { color: #555555; text-decoration: none; display: inline-block; padding: 0.3em 0.5em; }
.td-content nav a.current { background-color: #666666; color: white; }
.td-content nav label { margin: 0 10px; }
.td-content nav label span { display: none; }
.td-content nav select, #commands nav input { border: 1px solid #bbbbbb; font-size: 14px; margin: 0 5px; }
.td-content nav input { border-radius: 5px; padding: 5px 5px 6px 5px; width: 200px; border: 1px solid #bbbbbb; margin: 0 5px; font-size: 14px;}
.td-content nav input:focus { outline: none; }
.td-content nav select { height: 32px; }
select.command-reference-filter {
  background-color: white;
}
.nav-container {
  text-align: center;
}

hr.panel-line {
  display: none !important;
}

@media only screen and (min-width: 992px) {
  .td-content nav label span {
    display: inline !important;
  }
  .td-content nav input {
    width: 200px !important;
  }
  #card-id {
    margin: 1em 1.5% !important;
    overflow: scroll !important;
  }
}
@media only screen and (width: 768px) {
  .td-content nav {
    margin: 0 !important;
  }
  #card-id {
    margin: 0 !important;
  }
}

@media only screen and (max-width: 769px) {
  .td-content nav {
    margin: 6.5rem 0 0 auto;
    background-color: #f0f0f0;
    width: 100%;
    font-size: 0.85em;
    display: block;
    padding: 10px 0;
  }
  .row {
    display: block !important;
  }
  .d-flex {
    display: block !important;
  }
  #card-id {
    margin: 0 !important;
  }
}

.td-search-input.form-control:focus {
  border-color: white !important;
  box-shadow: 0 0 0 2px #99caff !important;
  color: black !important;
}

.row {
  display: flex;
  width: 100%;
  margin: 0 auto;
}

.td-main main {
  padding-bottom: 2rem !important;
  margin: 0 auto !important;
}

@media only screen and (min-width: 768px) {
    .col-md-9 {
      flex: 0 0 100% !important;
      max-width: 100% !important;
    }
    .td-main main {
      padding-top: 4.1rem !important;
    }
}

@media only screen and (min-width: 1200px) {
  .td-main main {

  }
}
span.args {
  display: inline !important;
  color: #555555 !important;
  white-space: nowrap !important;
  text-overflow: ellipsis !important;
  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
  margin: 0 0 2px 0 !important;
}
.container-fluid {
  padding-left: 0 !important;
  padding-right: 0 !important;
}
.col-12 {
  padding-left: 0em !important;
  padding-top: 1em !important;
  padding-right: 0 !important;
}
@media only screen and (min-width: 992px) {
  span.args {
    font-size: 0.8em !important;
  }
}
@media only screen and (min-width: 576px) {
  .container, .container-sm, .container-fluid {
    max-width: 100% !important;
  }

}
.container {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

